--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -2,10 +2,10 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 5px;
-  border: 1px solid #ccc;
-  border-radius: 8px;
-  background-color: white;
+  padding: 10px;
+  margin-bottom: 10px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
 }
 
 .info {
@@ -14,8 +14,6 @@
 }
 
 .text {
-  display: flex;
-  align-items: center;
   margin: 5px 0;
 }
 
@@ -24,15 +22,16 @@
   font-size: 1.2em;
 }
 
-.deleteButton {
+.button {
   padding: 5px 10px;
-  background-color: #ff0000;
-  border: 1px solid #ccc;
-  border-radius: 5px;
+  font-size: 14px;
+  color: #fff;
+  background-color: #dc3545;
+  border: none;
+  border-radius: 4px;
   cursor: pointer;
-  transition: background-color 0.2s ease;
 }
 
-.deleteButton:hover {
-  background-color: #de0000;
+.button:hover {
+  background-color: #c82333;
 }
