--- a/src/components/SearchBox/SearchBox.module.css
+++ b/src/components/SearchBox/SearchBox.module.css
@@ -1,11 +1,12 @@
 .searchBox {
-  margin-top: 20px;
   margin-bottom: 20px;
+  text-align: center;
 }
 
 .input {
   width: 80%;
   padding: 10px;
+  font-size: 14px;
+  border-radius: 4px;
   border: 1px solid #ccc;
-  border-radius: 5px;
 }
